# OverLayBench

./: README.md  index.html  install.sh  install_vllm.sh  pyproject.toml  requirements.txt  requirements_vllm.txt
OverLayBenchPyTools/: meter.py  utils.py
overlaybenchpytools/: clip.py  meter.py  utils.py
static/css/: index.css
static/data/: leaderboard.json  method_meta.json
static/js/: app.jsx  index.js
tests/: test.py
